categories show + color fixes in menu

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-
-✔ fix sort @started(25-02-08 16:43) @done(25-02-08 16:43) @lasted(13s)
+☐ add show categories @started(25-02-10 11:19)
+☐ fix sort
 Todo:
   ☐ Item
