profile image save added

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-☐ add show categories @started(25-02-10 11:19)
+✔ add show categories @started(25-02-10 11:19) @done(25-02-10 12:19) @lasted(1h14s)
+☐ add add categories btn
+✔ fix saving profile image @done(25-02-11 14:05)
 ☐ fix sort
 Todo:
   ☐ Item
